--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,5 +18,9 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "231a088230b9618eeb159ee537d143e3d2773f7a"
 }
