--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,9 @@
     "lib": "lib",
     "test": "__tests__"
   },
+  "bin": {
+    "oh-cli-dev": "bin/index.js"
+  },
   "files": [
     "lib"
   ],
