--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -20,7 +20,16 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@oh-cli-dev/utils": "^1.0.4"
+    "@oh-cli-dev/log": "file:../../utils/log",
+    "colors": "^1.4.0",
+    "dotenv": "^16.0.1",
+    "import-local": "^3.1.0",
+    "minimist": "^1.2.6",
+    "npmlog": "^6.0.2",
+    "path-exists": "^4.0.0",
+    "root-check": "^1.0.0",
+    "semver": "^7.3.7",
+    "user-home": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
