--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -20,11 +20,14 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@oh-cli-dev/get-npm-info": "file:../../utils/get-npm-info",
     "@oh-cli-dev/log": "file:../../utils/log",
+    "@oh-cli-dev/init": "file:../../commands/init",
+    "@oh-cli-dev/exec": "file:../exec",
     "colors": "^1.4.0",
+    "commander": "^9.4.0",
     "dotenv": "^16.0.1",
     "import-local": "^3.1.0",
-    "minimist": "^1.2.6",
     "npmlog": "^6.0.2",
     "path-exists": "^4.0.0",
     "root-check": "^1.0.0",
