--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "lerna": "^5.1.6"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
   }
 }
