--- a/utils/get-npm-info/package.json
+++ b/utils/get-npm-info/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/speak44/oh-cli-dev/issues"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "axios": "^0.27.2",
     "semver": "^7.3.7",
